Enhance calendar UI and functionality with new styles, event ID management, and improved week view display